--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -35827,3 +35827,26 @@ series:
         url: https://www.meetup.com/asociace-ux/events/290344986/
         dtstart: 2022-12-20 09:30:00+01:00
         dtend: 2022-12-20 12:30:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Research Tuesday in English: Design for Social Impact: Notes from UNICEF'
+        description: 'Asociace UX
+
+          Tuesday, December 20 at 9:30 AM
+
+
+          **Research Tuesday - this time in English.** Research Tuesdays are gatherings where professionals in the field of user research share their experience...
+
+          \nhttps://www.meetup.com/asociace-ux/events/290344986/'
+        location: The Forge – Kovárna Braník (Branická 26/43, , Hlavní město Praha, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290344986@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/290344986/
+        dtstart: 2022-12-20 09:30:00+01:00
+        dtend: 2022-12-20 12:30:00+01:00
