--- a/data/sources/applifting-meetup.yaml
+++ b/data/sources/applifting-meetup.yaml
@@ -47464,3 +47464,27 @@ series:
         url: https://www.meetup.com/applifting-meetup-1/events/288899216/
         dtstart: 2022-10-18 18:00:00+02:00
         dtend: 2022-10-18 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'iOS Crew Talk: Let''s talk about George'
+        description: 'Applifting Crew Talk
+
+          Tuesday, October 18 at 6:00 PM
+
+
+          Are you interested in banking apps? Would you like to know how to use biometrics to securely onboard customers? Then don''t miss our next Crew Talk on ...
+
+
+          https://www.meetup.com/applifting-meetup-1/events/288899216/'
+        location: Applifting Meetup Space (Rohanské nábřeží, 670/19, Praha, AL\, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288899216@meetup.com
+        url: https://www.meetup.com/applifting-meetup-1/events/288899216/
+        dtstart: 2022-10-18 18:00:00+02:00
+        dtend: 2022-10-18 21:00:00+02:00
