--- a/data/sources/applifting-meetup.yaml
+++ b/data/sources/applifting-meetup.yaml
@@ -1,8 +1,8 @@
 series:
   meetupcom:
-    url: https://www.meetup.com/applifting-meetup-1/
-    meta_description: Vyrábíme webové a mobilní aplikace pro iOS, Android i Flutter. Na backendu vyvíjíme převážně v Node.js a Pythonu, na frontendu v Reactu.Chceme s komunitou sdílet naše zkušenosti a dozvědět se také zaj
-    og_title: Applifting Crew Talk (Prague, Czech Republic)
+    url: https://www.meetup.com/login/
+    meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+    og_title: Login to Meetup | Meetup
     image: https://secure.meetupstatic.com/photos/event/1/7/d/3/600_493506099.jpeg
   events:
   - meetupcom:
