data: cron update

--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -48474,3 +48474,143 @@ series:
         url: https://www.meetup.com/morning-talks/events/288155187/
         dtstart: 2022-10-11 09:00:00+02:00
         dtend: 2022-10-11 17:00:00+02:00
+  - meetupcom:
+      meta_description: '**Prosíme Vás o registraci přímo na stránkách Datascriptu:**
+
+        https://www.datascript.cz/morning-talks/dynamicka-infrastruktura-v-consulu/
+
+
+        **Na co se můžete těšit:**
+
+        V měníc'
+      og_title: Dynamická infrastruktura v Consulu, Wed, Jan 18, 2023, 9:00 AM   | Meetup
+      url: https://www.meetup.com/morning-talks/events/290691440/
+      ical:
+        summary: Dynamická infrastruktura v Consulu
+        description: 'Morning Talks
+
+          Wednesday, January 18 at 9:00 AM
+
+
+          **Prosíme Vás o registraci přímo na stránkách Datascriptu:**https://www.datascript.cz/morning-talks/dynamicka-infrastruktura-v-consulu/ **Na co se můž...
+
+
+          https://www.meetup.com/morning-talks/events/290691440/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290691440@meetup.com
+        url: https://www.meetup.com/morning-talks/events/290691440/
+        dtstart: 2023-01-18 09:00:00+01:00
+        dtend: 2023-01-18 10:00:00+01:00
+  - meetupcom:
+      meta_description: '**Prosíme Vás o registraci přímo na stránkách Datascriptu:**
+
+        https://www.datascript.cz/morning-talks/uvod-do-problematiky-esg/
+
+
+        **Na co se můžete těšit:**
+
+        Cílem semináře je'
+      og_title: Úvod do problematiky ESG, Wed, Jan 25, 2023, 9:00 AM   | Meetup
+      url: https://www.meetup.com/morning-talks/events/290691472/
+      ical:
+        summary: Úvod do problematiky ESG
+        description: 'Morning Talks
+
+          Wednesday, January 25 at 9:00 AM
+
+
+          **Prosíme Vás o registraci přímo na stránkách Datascriptu:**https://www.datascript.cz/morning-talks/uvod-do-problematiky-esg/ **Na co se můžete těšit:...
+
+
+          https://www.meetup.com/morning-talks/events/290691472/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290691472@meetup.com
+        url: https://www.meetup.com/morning-talks/events/290691472/
+        dtstart: 2023-01-25 09:00:00+01:00
+        dtend: 2023-01-25 10:00:00+01:00
+  - meetupcom:
+      meta_description: '**Prosíme Vás o registraci přímo na stránkách Datascriptu:**
+
+        https://www.datascript.cz/morning-talks/evoluce-pythonu-moderni-prostredi-nova-syntaxe-a-trendy/
+
+
+        Za více než 3'
+      og_title: Evoluce Pythonu - moderní prostředí, nová syntaxe a trendy, Thu, Feb 2, 2023, 9:00 AM   | Meetup
+      url: https://www.meetup.com/morning-talks/events/290691494/
+      ical:
+        summary: Evoluce Pythonu - moderní prostředí, nová syntaxe a trendy
+        description: 'Morning Talks
+
+          Thursday, February 2 at 9:00 AM
+
+
+          **Prosíme Vás o registraci přímo na stránkách Datascriptu:**https://www.datascript.cz/morning-talks/evoluce-pythonu-moderni-prostredi-nova-syntaxe-a-t...\n
+
+          https://www.meetup.com/morning-talks/events/290691494/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290691494@meetup.com
+        url: https://www.meetup.com/morning-talks/events/290691494/
+        dtstart: 2023-02-02 09:00:00+01:00
+        dtend: 2023-02-02 10:00:00+01:00
+  - meetupcom:
+      meta_description: '**Prosíme Vás o registraci přímo na stránkách Datascriptu:**
+
+        https://www.datascript.cz/morning-talks/predstaveni-modernich-linuxovych-kontejneru-pomoci-nastroju-podman-a-bu'
+      og_title: Představení moderních linuxových kontejnerů pomocí nástrojů Podman a Buildah, Wed, Feb 8, 2023, 9:00 AM   | Meetup
+      url: https://www.meetup.com/morning-talks/events/290691506/
+      ical:
+        summary: Představení moderních linuxových kontejnerů pomocí nástrojů Podman a Buildah
+        description: 'Morning Talks
+
+          Wednesday, February 8 at 9:00 AM
+
+
+          **Prosíme Vás o registraci přímo na stránkách Datascriptu:**https://www.datascript.cz/morning-talks/predstaveni-modernich-linuxovych-kontejneru-pomoci...
+
+
+          https://www.meetup.com/morning-talks/events/290691506/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290691506@meetup.com
+        url: https://www.meetup.com/morning-talks/events/290691506/
+        dtstart: 2023-02-08 09:00:00+01:00
+        dtend: 2023-02-08 10:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: IT bezpečnost v cloudu
+        description: 'Morning Talks
+
+          Wednesday, October 26 at 9:00 AM
+
+
+          **Prosíme Vás o registraci přímo na stránkách Datascriptu:**https://www.datascript.cz/morning-talks/it-bezpecnost-v-cloudu/ **Na co se můžete těšit:**...
+
+
+          https://www.meetup.com/morning-talks/events/288152861/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_288152861@meetup.com
+        url: https://www.meetup.com/morning-talks/events/288152861/
+        dtstart: 2022-10-26 09:00:00+02:00
+        dtend: 2022-10-26 10:00:00+02:00
