--- a/data/sources/czskppug.yaml
+++ b/data/sources/czskppug.yaml
@@ -28485,3 +28485,123 @@ series:
         url: https://www.meetup.com/czskppug/events/287184978/
         dtstart: 2022-09-08 17:00:00+02:00
         dtend: 2022-09-08 19:00:00+02:00
+  - meetupcom:
+      meta_description: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p
+      og_title: CZSK PPUG Meetup, Thu, Jan 12, 2023, 5:00 PM   | Meetup
+      url: https://www.meetup.com/czskppug/events/290709851/
+      ical:
+        summary: CZSK PPUG Meetup
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, January 12 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/290709851/'
+        location: Microsoft (Vyskočilova 1561/4a, Praha 4, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290709851@meetup.com
+        url: https://www.meetup.com/czskppug/events/290709851/
+        dtstart: 2023-01-12 17:00:00+01:00
+        dtend: 2023-01-12 19:00:00+01:00
+  - meetupcom:
+      meta_description: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p
+      og_title: CZSK PPUG Meetup, Thu, Feb 9, 2023, 5:00 PM   | Meetup
+      url: https://www.meetup.com/czskppug/events/290709857/
+      ical:
+        summary: CZSK PPUG Meetup
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, February 9 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/290709857/'
+        location: Microsoft (Vyskočilova 1561/4a, Praha 4, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290709857@meetup.com
+        url: https://www.meetup.com/czskppug/events/290709857/
+        dtstart: 2023-02-09 17:00:00+01:00
+        dtend: 2023-02-09 19:00:00+01:00
+  - meetupcom:
+      meta_description: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p
+      og_title: CZSK PPUG Meetup, Thu, Mar 9, 2023, 5:00 PM   | Meetup
+      url: https://www.meetup.com/czskppug/events/290709864/
+      ical:
+        summary: CZSK PPUG Meetup
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, March 9 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/290709864/'
+        location: Microsoft (Vyskočilova 1561/4a, Praha 4, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290709864@meetup.com
+        url: https://www.meetup.com/czskppug/events/290709864/
+        dtstart: 2023-03-09 17:00:00+01:00
+        dtend: 2023-03-09 19:00:00+01:00
+  - meetupcom:
+      meta_description: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p
+      og_title: CZSK PPUG Meetup, Thu, Apr 13, 2023, 5:00 PM   | Meetup
+      url: https://www.meetup.com/czskppug/events/290709869/
+      ical:
+        summary: CZSK PPUG Meetup
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, April 13 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/290709869/'
+        location: Microsoft (Vyskočilova 1561/4a, Praha 4, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290709869@meetup.com
+        url: https://www.meetup.com/czskppug/events/290709869/
+        dtstart: 2023-04-13 17:00:00+02:00
+        dtend: 2023-04-13 19:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: CZSK PPUG Meetup
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, December 8 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/287184997/'
+        location: Microsoft (Vyskočilova 1561/4a, Praha 4, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_287184997@meetup.com
+        url: https://www.meetup.com/czskppug/events/287184997/
+        dtstart: 2022-12-08 17:00:00+01:00
+        dtend: 2022-12-08 19:00:00+01:00
