--- a/data/sources/pjsdc.yaml
+++ b/data/sources/pjsdc.yaml
@@ -43793,3 +43793,27 @@ series:
         url: https://www.meetup.com/prague-junior-software-developer-course/events/290016316/
         dtstart: 2022-12-20 18:00:00+01:00
         dtend: 2022-12-20 21:00:00+01:00
+  - meetupcom:
+      meta_description: Chceš do IT, ale nevíš, jaká specializace by ti sedla? Tápeš ve specializacích, které nabízíme? Přemýšlíš, že bys začal/a splácet školné až po kurzu a nástupu do práce? Reg
+      og_title: 'Online informační schůzka: Jak nastartovat kariéru v IT od nuly?, Tue, Jan 24, 2023, 6:00 PM   | Meetup'
+      url: https://www.meetup.com/prague-junior-software-developer-course/events/290418607/
+      ical:
+        summary: 'Online informační schůzka: Jak nastartovat kariéru v IT od nuly?'
+        description: 'Become a software developer from 0
+
+          Tuesday, January 24 at 6:00 PM
+
+
+          Chceš do IT, ale nevíš, jaká specializace by ti sedla? Tápeš ve specializacích, které nabízíme? Přemýšlíš, že bys začal/a splácet školné až po kurzu a...
+
+
+          https://www.meetup.com/prague-junior-software-developer-course/events/290418607/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290418607@meetup.com
+        url: https://www.meetup.com/prague-junior-software-developer-course/events/290418607/
+        dtstart: 2023-01-24 18:00:00+01:00
+        dtend: 2023-01-24 20:00:00+01:00
