--- a/data/sources/ruby-praha.yaml
+++ b/data/sources/ruby-praha.yaml
@@ -8960,9 +8960,9 @@ series:
         dtstart: 2022-08-03 19:00:00+02:00
         dtend: 2022-08-03 22:00:00+02:00
   - meetupcom:
-      meta_description: Find Meetup events so you can do more of what matters to you. Or create your own group and meet people near you who share your interests.
-      og_title: First Wednesday Of The Month - Ruby, Wed, Jan 4, 2023, 7:00 PM   | Meetup
-      url: https://www.meetup.com/praguerb/events/dkmktfyfccbgb/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: First Wednesday Of The Month - Ruby
         description: 'Prague.rb / CSRUG
@@ -14797,3 +14797,24 @@ series:
         url: https://www.meetup.com/praguerb/events/289815686/
         dtstart: 2022-12-07 19:00:00+01:00
         dtend: 2022-12-07 22:00:00+01:00
+  - meetupcom:
+      meta_description: Find Meetup events so you can do more of what matters to you. Or create your own group and meet people near you who share your interests.
+      og_title: First Wednesday Of The Month - Ruby, Wed, May 3, 2023, 7:00 PM   | Meetup
+      url: https://www.meetup.com/praguerb/events/dkmktfyfchbfb/
+      ical:
+        summary: First Wednesday Of The Month - Ruby
+        description: 'Prague.rb / CSRUG
+
+          Wednesday, May 3 at 7:00 PM
+
+
+          https://www.meetup.com/praguerb/events/dkmktfyfchbfb/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_dkmktfyfchbfb@meetup.com
+        url: https://www.meetup.com/praguerb/events/dkmktfyfchbfb/
+        dtstart: 2023-05-03 19:00:00+02:00
+        dtend: 2023-05-03 22:00:00+02:00
