--- a/data/sources/ruby-praha.yaml
+++ b/data/sources/ruby-praha.yaml
@@ -14818,3 +14818,24 @@ series:
         url: https://www.meetup.com/praguerb/events/dkmktfyfchbfb/
         dtstart: 2023-05-03 19:00:00+02:00
         dtend: 2023-05-03 22:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: First Wednesday Of The Month - Ruby
+        description: 'Prague.rb / CSRUG
+
+          Wednesday, January 4 at 7:00 PM
+
+
+          https://www.meetup.com/praguerb/events/290352816/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_dkmktfyfccbgb@meetup.com
+        url: https://www.meetup.com/praguerb/events/290352816/
+        dtstart: 2023-01-04 19:00:00+01:00
+        dtend: 2023-01-04 22:00:00+01:00
