--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -36471,3 +36471,49 @@ series:
         url: https://www.meetup.com/asociace-ux/events/290344986/
         dtstart: 2022-12-20 09:30:00+01:00
         dtend: 2022-12-20 12:30:00+01:00
+  - meetupcom:
+      meta_description: 'UX dinner is a meeting of the UX community in Brno. You can expect an informal dinner, discussing small design problems, an opportunity to find a mentor, or a new project. '
+      og_title: UX Dinner Brno in January, Thu, Jan 26, 2023, 5:30 PM   | Meetup
+      url: https://www.meetup.com/asociace-ux/events/290744897/
+      ical:
+        summary: UX Dinner Brno in January
+        description: 'Asociace UX
+
+          Thursday, January 26 at 5:30 PM
+
+
+          UX dinner is a meeting of the UX community in Brno. You can expect an informal dinner, discussing small design problems, an opportunity to find a ment...\n
+
+          https://www.meetup.com/asociace-ux/events/290744897/'
+        location: Padagali (Kotlářská 51a, Brno-střed-Veveří, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290744897@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/290744897/
+        dtstart: 2023-01-26 17:30:00+01:00
+        dtend: 2023-01-26 20:30:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'Research Tuesday in English: Design for Social Impact: Notes from UNICEF'
+        description: 'Asociace UX
+
+          Tuesday, December 20 at 9:30 AM
+
+
+          **Research Tuesday - this time in English.** Research Tuesdays are gatherings where professionals in the field of user research share their experience...
+
+          \nhttps://www.meetup.com/asociace-ux/events/290344986/'
+        location: The Forge – Kovárna Braník (Branická 26/43, , Hlavní město Praha, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290344986@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/290344986/
+        dtstart: 2022-12-20 09:30:00+01:00
+        dtend: 2022-12-20 12:30:00+01:00
