--- a/data/sources/topmonks-caffe.yaml
+++ b/data/sources/topmonks-caffe.yaml
@@ -54060,3 +54060,51 @@ series:
         url: https://www.meetup.com/topmonks-caffe/events/288347991/
         dtstart: 2022-09-13 19:00:00+02:00
         dtend: 2022-09-13 21:00:00+02:00
+  - meetupcom:
+      meta_description: Máme tu nový rok 2023 a ten zcela netradičně začneme až v druhém týdnu, protože ten první by stejně nikdo nemohl. Loft N8 už je po rekonstrukci, takže potkáme zase tam. Těš
+      og_title: První TopMonks Caffè v roce 2023, Tue, Jan 10, 2023, 7:00 PM   | Meetup
+      url: https://www.meetup.com/topmonks-caffe/events/290740583/
+      ical:
+        summary: První TopMonks Caffè v roce 2023
+        description: 'TopMonks Caffè
+
+          Tuesday, January 10 at 7:00 PM
+
+
+          Máme tu nový rok 2023 a ten zcela netradičně začneme až v druhém týdnu, protože ten první by stejně nikdo nemohl. Loft N8 už je po rekonstrukci, takže...
+
+
+          https://www.meetup.com/topmonks-caffe/events/290740583/'
+        location: Loft N8 Restaurant and Shisha Lounge (Nekázanka 883/8, Nové Město, Praha-Praha 1, Czech Republic 110 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290740583@meetup.com
+        url: https://www.meetup.com/topmonks-caffe/events/290740583/
+        dtstart: 2023-01-10 19:00:00+01:00
+        dtend: 2023-01-10 21:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Ozvěny HackerCampu
+        description: 'TopMonks Caffè
+
+          Tuesday, December 6 at 7:00 PM
+
+
+          Tentokrát jsme dali prostor přednáškám, které měly zaznít na HackerCampu, ale nakonec z různých důvodů nezazněly. Můžete se těšit na **Tondu Hackenber...
+
+
+          https://www.meetup.com/topmonks-caffe/events/289924428/'
+        location: TopMonks (Struhařovská 2931/9, Praha 4-Spořilov, Czech Republic 141 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289924428@meetup.com
+        url: https://www.meetup.com/topmonks-caffe/events/289924428/
+        dtstart: 2022-12-06 19:00:00+01:00
+        dtend: 2022-12-06 21:00:00+01:00
