--- a/data/sources/topmonks-caffe.yaml
+++ b/data/sources/topmonks-caffe.yaml
@@ -54252,3 +54252,27 @@ series:
         url: https://www.meetup.com/topmonks-caffe/events/289924428/
         dtstart: 2022-12-06 19:00:00+01:00
         dtend: 2022-12-06 21:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Ozvěny HackerCampu
+        description: 'TopMonks Caffè
+
+          Tuesday, December 6 at 7:00 PM
+
+
+          Tentokrát jsme dali prostor přednáškám, které měly zaznít na HackerCampu, ale nakonec z různých důvodů nezazněly. Můžete se těšit na **Tondu Hackenber...
+
+
+          https://www.meetup.com/topmonks-caffe/events/289924428/'
+        location: TopMonks (Struhařovská 2931/9, Praha 4-Spořilov, Czech Republic 141 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289924428@meetup.com
+        url: https://www.meetup.com/topmonks-caffe/events/289924428/
+        dtstart: 2022-12-06 19:00:00+01:00
+        dtend: 2022-12-06 21:00:00+01:00
