--- a/data/sources/strv.yaml
+++ b/data/sources/strv.yaml
@@ -35044,3 +35044,96 @@ series:
         url: https://www.meetup.com/strv-meetups/events/289309373/
         dtstart: 2022-11-08 18:00:00+01:00
         dtend: 2022-11-08 22:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: STRV Backend Meetup - How We Build Backend PRG
+        description: 'STRV Meetups
+
+          Thursday, November 24 at 6:00 PM
+
+
+          **(https://www.eventbrite.com/e/backend-meetup-how-we-build-backend-prg-tickets-464986867237?aff=meetup)** Curious about how we build backend solution...\n
+
+          https://www.meetup.com/strv-meetups/events/289663632/'
+        location: STRV Prague (Rohanske nabrezi 678/23, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289663632@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/289663632/
+        dtstart: 2022-11-24 18:00:00+01:00
+        dtend: 2022-11-24 22:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: STRV Backend Meetup - How We Build Backend BRN
+        description: 'STRV Meetups
+
+          Tuesday, November 22 at 6:00 PM
+
+
+          **🔥 (https://www.eventbrite.com/e/backend-meetup-how-we-build-backend-brn-tickets-464983557337?aff=meetup) 🔥** Curious about how we build backend solu...
+
+
+          https://www.meetup.com/strv-meetups/events/289663618/'
+        location: STRV (Přízova 284/5, Brno-střed, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289663618@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/289663618/
+        dtstart: 2022-11-22 18:00:00+01:00
+        dtend: 2022-11-22 22:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'iOS Meetup: Modernization & Persistence PRG'
+        description: 'STRV Meetups
+
+          Thursday, November 10 at 6:00 PM
+
+
+          (https://www.eventbrite.com/e/ios-meetup-modernization-persistence-prg-tickets-449449384207?aff=meetup)**(https://www.eventbrite.com/e/ios-meetup-mode...\n
+
+          https://www.meetup.com/strv-meetups/events/289309509/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289309509@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/289309509/
+        dtstart: 2022-11-10 18:00:00+01:00
+        dtend: 2022-11-10 22:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'iOS Meetup: Modernization & Persistence BRNO'
+        description: 'STRV Meetups
+
+          Tuesday, November 8 at 6:00 PM
+
+
+          **(https://www.eventbrite.com/e/ios-meetup-modernization-persistence-brn-tickets-449444770407?aff=meetup)** Imagine this: You have a legacy iOS codeba...
+
+          \nhttps://www.meetup.com/strv-meetups/events/289309373/'
+        location: STRV (Přízova 284/5, Brno-střed, Czech Republic 602 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289309373@meetup.com
+        url: https://www.meetup.com/strv-meetups/events/289309373/
+        dtstart: 2022-11-08 18:00:00+01:00
+        dtend: 2022-11-08 22:00:00+01:00
