--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -35366,9 +35366,9 @@ series:
         dtstart: 2022-12-05 18:00:00+01:00
         dtend: 2022-12-05 20:00:00+01:00
   - meetupcom:
-      meta_description: '*Why in some companies designers don’t need to explain the value of design, while in others designers have to fight to do their job? How do companies increase their [design'
-      og_title: 'UX Monday: Design maturity, Mon, Jan 9, 2023, 6:00 PM   | Meetup'
-      url: https://www.meetup.com/asociace-ux/events/290418481/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: 'UX Monday: Design maturity'
         description: 'Asociace UX
